--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="windowActionBar">false</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="MyActionBar">
+        <item name="android:background">@drawable/bg_toolbar</item>
+    </style>
+
+
 
 </resources>
