--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -7,4 +7,11 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/search"
+        android:title="@string/search_hint"
+        android:icon="@drawable/icon_search"
+        app:showAsAction="always" />
+
 </menu>
