--- a/app/src/main/res/menu/uni_search.xml
+++ b/app/src/main/res/menu/uni_search.xml
@@ -1,11 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".HomeActivity">
+    tools:context="com.bsb.zee.presentation.activity.MainActivity">
+
     <item
-        android:id="@+id/search"
+        android:id="@+id/action_search"
         android:title="@string/search_hint"
         android:icon="@drawable/icon_search"
-        app:showAsAction="always" />
-
+        app:showAsAction="always"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 </menu>
