--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -8,4 +8,10 @@
         android:icon="@drawable/icon_search"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_dump"
+        android:orderInCategory="100"
+        android:title="DB Dump"
+        app:showAsAction="never" />
+
 </menu>
