--- a/app/src/main/res/layout/answer_row_item.xml
+++ b/app/src/main/res/layout/answer_row_item.xml
@@ -94,6 +94,7 @@
             <TextView
                 android:id="@+id/tv_body"
                 android:layout_weight="1"
+                android:autoLink="web"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:ellipsize="end"
