--- a/app/src/main/res/layout/answer_row_item.xml
+++ b/app/src/main/res/layout/answer_row_item.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:ellipsize="end"
-        android:textIsSelectable="false"
+        android:textIsSelectable="true"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
 
