--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -12,6 +12,6 @@
         android:id="@+id/action_dump"
         android:orderInCategory="100"
         android:title="DB Dump"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 
 </menu>
